Fixed image overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ main {
 }
 
 .card {
-  width: 320px;
+  max-width: 320px;
   padding: 16px;
   border-radius: 20px;
   background-color: var(--white);
